# aiutante

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.army/tools/: centraline.yml  python.yml
.github/workflows/: CI.yml
registry/agents/: Aiutante.md
registry/tools/: aiutante.yml  delegate.yml
sandbox/: Dockerfile
src/: agent.rs  api.rs  main.rs  tools.rs
src/tools/: yaml.rs
