[package]
name = "aiutante"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = {version = "4.5.46", features = ["derive"]}
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
rig-core = "0.18.2"
schemars = "1.0.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
teloxide = { version = "0.17.0", features = ["macros"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["trace", "cors"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
axum-streams = { version = "0.23", features=["json", "csv", "protobuf", "text", "arrow"] }
futures = "0.3.31"
